--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <jackson.version>2.13.5</jackson.version>
         <postgres.version>42.6.0</postgres.version>
         <spring-data-jpa.version>2.7.15</spring-data-jpa.version>
+        <hibernate.version>5.5.7.Final</hibernate.version>
     </properties>
     <dependencies>
 
@@ -95,20 +96,17 @@
             <version>${lombok.version}</version>
         </dependency>
 
-
         <dependency>
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-jpa</artifactId>
             <version>${spring-data-jpa.version}</version>
         </dependency>
 
-
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
             <version>1.7.30</version>
         </dependency>
-
 
         <dependency>
             <groupId>org.junit.jupiter</groupId>
@@ -121,6 +119,18 @@
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-core</artifactId>
             <version>2.20.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-entitymanager</artifactId>
+            <version>${hibernate.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>${hibernate.version}</version>
         </dependency>
 
     </dependencies>
